infrastructure/kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: cerberus
  labels:
    name: cerberus
    environment: production
